fixed text rendering on mobile view

--- a/public/style.css
+++ b/public/style.css
@@ -50,3 +50,10 @@ body {
     font-weight: 700;
     margin-left: 90px;
 }
+@media only screen and (max-width: 600px) {
+    .title h1 {
+      font-size: 23px;
+      margin-left: 0;
+      text-align: center;
+    }
+  }
